# marko-hs

./: README.md  marko.cabal
src/: IRC.hs  Main.hs  Marko.hs  profile.txt
test/: Main.hs
